--- a/_posts/2016-10-14-mark-down.markdown
+++ b/_posts/2016-10-14-mark-down.markdown
@@ -1,16 +1,11 @@
 ---
 layout: post
-title:  "hello!"
+title:  "Markdown"
 date:   2016-10-12 17:13:17 +0800
 categories: update
 ---
-Markdown 简明语法手册
-
-# Cmd Markdown 简明语法手册
-
-标签： Cmd-Markdown
-
 ---
+Markdown manual
 
 ### 1. 斜体和粗体
 
@@ -98,15 +93,10 @@ Markdown 简明语法手册
 
 ![我的头像](https://www.zybuluo.com/static/img/my_head.jpg)
 
-# Cmd Markdown 高阶语法手册
+## Markdown 高阶语法手册
 
-### 1. 内容目录
 
-在段落中填写 `[TOC]` 以显示全文内容的目录结构。
-
-[TOC]
-
-### 2. 标签分类
+### 1. 标签分类
 
 在编辑区任意行的列首位置输入以下代码给文稿标签：
 
@@ -116,13 +106,13 @@ Markdown 简明语法手册
 
 Tags： 数学 英语 Markdown
 
-### 3. 删除线
+### 2. 删除线
 
 使用 ~~ 表示删除线。
 
 ~~这是一段错误的文本。~~
 
-### 4. 注脚
+### 3. 注脚
 
 使用 [^keyword] 表示注脚。
 
@@ -130,23 +120,7 @@ Tags： 数学 英语 Markdown
 
 这是第二个注脚[^footnote2]的样例。
 
-### 5. LaTeX 公式
-
-$ 表示行内公式： 
-
-质能守恒方程可以用一个很简洁的方程式 $E=mc^2$ 来表达。
-
-$$ 表示整行公式：
-
-$$\sum_{i=1}^n a_i=0$$
-
-$$f(x_1,x_x,\ldots,x_n) = x_1^2 + x_2^2 + \cdots + x_n^2 $$
-
-$$\sum^{j-1}_{k=0}{\widehat{\gamma}_{kj} z_k}$$
-
-访问 [MathJax](http://meta.math.stackexchange.com/questions/5020/mathjax-basic-tutorial-and-quick-reference) 参考更多使用方法。
-
-### 6. 加强的代码块
+### 4. 加强的代码块
 
 支持四十一种编程语言的语法高亮的显示，行号显示。
 
@@ -195,101 +169,7 @@ function fib(n) {
 document.write(fib(10));
 ```
 
-### 7. 流程图
-
-#### 示例
-
-```flow
-st=>start: Start:>https://www.zybuluo.com
-io=>inputoutput: verification
-op=>operation: Your Operation
-cond=>condition: Yes or No?
-sub=>subroutine: Your Subroutine
-e=>end
-
-st->io->op->cond
-cond(yes)->e
-cond(no)->sub->io
-```
-
-#### 更多语法参考：[流程图语法参考](http://adrai.github.io/flowchart.js/)
-
-### 8. 序列图
-
-#### 示例 1
-
-```seq
-Alice->Bob: Hello Bob, how are you?
-Note right of Bob: Bob thinks
-Bob-->Alice: I am good thanks!
-```
-
-#### 示例 2
-
-```seq
-Title: Here is a title
-A->B: Normal line
-B-->C: Dashed line
-C->>D: Open arrow
-D-->>A: Dashed open arrow
-```
-
-#### 更多语法参考：[序列图语法参考](http://bramp.github.io/js-sequence-diagrams/)
-
-### 9. 甘特图
-
-甘特图内在思想简单。基本是一条线条图，横轴表示时间，纵轴表示活动（项目），线条表示在整个期间上计划和实际的活动完成情况。它直观地表明任务计划在什么时候进行，及实际进展与计划要求的对比。
-
-```gantt
-    title 项目开发流程
-    section 项目确定
-        需求分析       :a1, 2016-06-22, 3d
-        可行性报告     :after a1, 5d
-        概念验证       : 5d
-    section 项目实施
-        概要设计      :2016-07-05  , 5d
-        详细设计      :2016-07-08, 10d
-        编码          :2016-07-15, 10d
-        测试          :2016-07-22, 5d
-    section 发布验收
-        发布: 2d
-        验收: 3d
-```
-
-#### 更多语法参考：[甘特图语法参考](https://knsv.github.io/mermaid/#gant-diagrams)
-
-### 10. Mermaid 流程图
-
-```graphLR
-    A[Hard edge] -->|Link text| B(Round edge)
-    B --> C{Decision}
-    C -->|One| D[Result one]
-    C -->|Two| E[Result two]
-```
-
-#### 更多语法参考：[Mermaid 流程图语法参考](https://knsv.github.io/mermaid/#flowcharts-basic-syntax)
-
-### 11. Mermaid 序列图
-
-```sequence
-    Alice->John: Hello John, how are you?
-    loop every minute
-        John-->Alice: Great!
-    end
-```
-
-#### 更多语法参考：[Mermaid 序列图语法参考](https://knsv.github.io/mermaid/#sequence-diagrams)
-
-### 12. 表格支持
-
-| 项目        | 价格   |  数量  |
-| --------   | -----:  | :----:  |
-| 计算机     | \$1600 |   5     |
-| 手机        |   \$12   |   12   |
-| 管线        |    \$1    |  234  |
-
-
-### 13. 定义型列表
+### 5. 定义型列表
 
 名词 1
 :   定义 1（左侧有一个可见的冒号和四个不可见的空格）
@@ -299,7 +179,7 @@ D-->>A: Dashed open arrow
 
         代码块（左侧有八个不可见的空格）
 
-### 14. Html 标签
+### 6. Html 标签
 
 本站支持在 Markdown 语法中嵌套 Html 标签，譬如，你可以用 Html 写一个纵跨两行的表格：
 
@@ -332,23 +212,7 @@ D-->>A: Dashed open arrow
     </tr>
 </table>
 
-### 15. 内嵌图标
-
-本站的图标系统对外开放，在文档中输入
-
-    <i class="icon-weibo"></i>
-
-即显示微博的图标： <i class="icon-weibo icon-2x"></i>
-
-替换 上述 `i 标签` 内的 `icon-weibo` 以显示不同的图标，例如：
-
-    <i class="icon-renren"></i>
-
-即显示人人的图标： <i class="icon-renren icon-2x"></i>
-
-更多的图标和玩法可以参看 [font-awesome](http://fortawesome.github.io/Font-Awesome/3.2.1/icons/) 官方网站。
-
-### 16. 待办事宜 Todo 列表
+### 7. 待办事宜 Todo 列表
 
 使用带有 [ ] 或 [x] （未完成或已完成）项的列表语法撰写一个待办事宜列表，并且支持子列表嵌套以及混用Markdown语法，例如：
 
