--- a/_posts/2016-10-14-mark-down.markdown
+++ b/_posts/2016-10-14-mark-down.markdown
@@ -3,6 +3,7 @@ layout: post
 title:  "Markdown"
 date:   2016-10-12 17:13:17 +0800
 categories: update
+author: songroger
 ---
 ---
 Markdown manual
