--- a/_posts/2016-10-21-virushuo.markdown
+++ b/_posts/2016-10-21-virushuo.markdown
@@ -23,10 +23,10 @@ tail: <a href="http://blog.devep.net/virushuo/" class="post-tags">[From 霍炬]<
 今年3月份的时候，我在杭州和一个朋友聊天，我们叫她夕总，是做传统行业的。她很惊讶程序员为什么这么难招聘。我给她大致描述了越来越多的行业开始使用软件来替代传统人力劳动的状况。她恍然大悟的说：“啊，我知道了，我家小区过去是个老大爷负责收停车费，现在变成了完全自动刷卡进入。所以，很多个老大爷被软件替代了，软件又需要程序员来开发和维护？” 这个例子找的非常准确，从一个具体的案例来看，就是这样的。她敏锐的抓住了现实世界最基层的情况。我也继续用这个例子做为背景说下去。
 
 图片：以前是这样的
-![pic1](http://mmbiz.qpic.cn/mmbiz/FGHkyMt13UX0fVT1NIqXrKw52JiaOzibQicQibj503umV6v4CWnUqHW1wO620e556gmooS9IK6pfnxnU1bQrRlaDsw/640?wx_fmt=jpeg&tp=webp&wxfrom=5&wx_lazy=1)
+![pic1](http://7xof48.com1.z0.glb.clouddn.com/peitu/D170D2E6-4CC7-434C-A965-4B2AC5DE4DD0.png)
 
 图片：以后都是这样的了…
-![pic2](http://mmbiz.qpic.cn/mmbiz/FGHkyMt13UX0fVT1NIqXrKw52JiaOzibQicGaaRsKMFpxQs8a8iaQmqszOuvuj67wboKGNzysVhZ6zUMYdlic21ga3g/640?wx_fmt=jpeg&tp=webp&wxfrom=5&wx_lazy=1)
+![pic2](http://7xof48.com1.z0.glb.clouddn.com/peitu/1AAF3D0E-6F85-4194-ACDE-899B50F9B553.png)
 
 当我们用一套停车场管理系统，替代了停车场管理员（那个老大爷）之后，整件事情改变了什么？它并不仅仅是节约了一个老大爷的人力成本这么简单，仅仅节约人力成本的价值并不大，因为基层体力劳动的人力成本是相当有限的，节约20个老大爷的工资，也未必能比得上一个程序员的工资支出。
 
@@ -48,14 +48,14 @@ tail: <a href="http://blog.devep.net/virushuo/" class="post-tags">[From 霍炬]<
 说到这里，推荐一部非常符合这个主题的动画片，叫做《夏日大作战》，这部2009年的动画用图形化和更易懂的方式描述了这种未来的场景，非常好看。这是2010年，当时还在九城工作的布布推荐我的，我们都非常喜欢它，也一致认为这就是未来。（布布这个人也在笑来关于比特币的文章里面出现过，他跟笑来说不要挖矿，要花钱去买比特币…是一个非常传奇的家伙）
 
 图片：夏日大作战
-![pic3](http://mmbiz.qpic.cn/mmbiz/FGHkyMt13UX0fVT1NIqXrKw52JiaOzibQic449STeqkiauwcckQXFWmiarrzWEX8hZHanRYCBBqbQyhVia9tW1zjq9OQ/640?wx_fmt=jpeg&tp=webp&wxfrom=5&wx_lazy=1)
+![pic3](http://7xof48.com1.z0.glb.clouddn.com/peitu/C4E4F877-AD5A-47C6-A0C6-D8182C84EFBE.png)
 
 我们再站高一点，看之前描述的场景。现在我们有了若干的资源单元，他们分布在不同的行业，这些单元已经被软件定义好了，我们看作是黑箱。在软件之下，又定义了无数具体工作人员的行为。刚才的例子里面，除了停车场管理员，还有厨师，服务员…沿着这个思路继续想，还会有给餐馆进货，供应原材料的供应商，维修停车场设施的公司…所有这些，会会被虚拟化成软件世界中的一个单元。然后是各种被提供服务的人（所谓用户），他们有接收信息的方式，大到计算机，小到智能手机，或者各种嵌入式系统，比如特斯拉电动车驾驶舱里面的那块大屏幕…一个使用手机的用户，或者一辆特斯拉，同样都可以被抽象成一个带有接口的资源单元。所有资源单元的行为，都是被软件定义的，他们之间的交互方式和可能产生的结果，同样是被软件定义和调配的。这其中的每一层，每一部分，都需要大量程序员的工作。越来越多的现实资源被虚拟化，也就产生了更多的交互和更多的可能性，这些一样需要程序员去实现。今天，人类社会被虚拟化成软件的资源还只有极少的部分，我没有具体统计的数字，但大家只要想想自己每天的现实生活所需所用，至少能有个大概的感知，恐怕被虚拟化的资源连1%都不到。未来的空间有多大？几乎是无限量的大。
 
 现实世界能被虚拟化到什么程度呢，我之前几次推荐过科幻小说《雪崩》里面描述了未来的世界只剩下三种职业：娱乐业、程序员和Pizza快递员。这本写于90年代初的小说，早年看起来非常震撼，今天看起来…觉得他还不够极端。因为现在我们已经确知了，Pizza快递员的工作会被无人机改变，娱乐业会被VR/AR改变。最后干脆现实世界只剩下了程序员这一种职业…软件并没有吞噬掉现实世界，而是重新定义了现实世界的所有资源。
 
 图片：雪崩封面
-![pic3](http://mmbiz.qpic.cn/mmbiz/FGHkyMt13UX0fVT1NIqXrKw52JiaOzibQicasibPKaPXym8bKjlVHo8h5ibf7kkULvDqkX2X6zye17sZHzIn923xibxA/640?wx_fmt=jpeg&tp=webp&wxfrom=5&wx_lazy=1)
+![pic3](http://7xof48.com1.z0.glb.clouddn.com/peitu/058033FF-BC0D-4CFB-8063-C882469165E4.png)
 
 所以，今天一切关于软件/互联网泡沫的看法都是过时的。现实世界的虚拟化已经快到了相当的程度，我们真的需要大量的程序员，未来仍然需要，有多少都不够用。因为程序员职业缺口太大了，早就不是有钱就能招聘到的了，甚至一个程序员因为公司要打卡，就会选择另外一家企业，因为他们可选择的余地实在太大了。很多企业远远没意识到问题的严重性，而聪明的企业，已经在忙着做“企业技术文化”工作了。如果你不是BAT，又不是一个很酷的新公司，程序员们根本对你没有兴趣，到这个境地，花别人一倍的钱也未必能雇到人，所以就需要做技术文化工作，去宣传我们也是很酷的，我们也是能改变世界的…从而不至于在这种竞争中落后。
 
