--- a/_posts/2016-10-21-virushuo.markdown
+++ b/_posts/2016-10-21-virushuo.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "为什么你招聘不到程序员，以及软件如何定义现实世界"
 date:   2016-10-21 17:21:17 +0000
 categories: copied
-tail: <a href="http://blog.devep.net/virushuo/" class="post-tags">[From 霍炬]</a>
+tail: <a href="http://blog.devep.net/virushuo/">[From 霍炬]</a>
 ---
 ---
 现在已经是2015年的最后几天了。这一年里面，互联网创业从火热到“寒冷“，但有一件事全年都没有变化，就是大家都觉得招聘不到程序员。我没有确切的数字知道2015年这一年程序员的薪资增长的比例，但是我确切的知道，在2015年，一个有3~4年工作经验的年轻程序员，在北京和上海能拿到的薪水已经接近2010年盛大创新院给我的薪水了。要知道，2010年盛大为了创建创新院，给出的是业界顶级的薪水，而且那时候我已经有8年的工作经验了。这不过是5年前的事，今天，3年工作经验的程序员薪水已经到了这个水平。
