--- a/_posts/2016-10-14-mark-down.markdown
+++ b/_posts/2016-10-14-mark-down.markdown
@@ -4,6 +4,7 @@ title:  "Markdown"
 date:   2016-10-12 17:13:17 +0800
 categories: update
 author: songroger
+description: love markdown, love plain texts. Enjoy its manual
 ---
 ---
 Markdown manual
