--- a/_posts/2016-10-24-zhu-ge.markdown
+++ b/_posts/2016-10-24-zhu-ge.markdown
@@ -4,6 +4,7 @@ title:  "中华瑰宝之-易经-诸葛神签"
 date:   2016-10-24 20:05:14 +0000
 categories: copied
 tail: "By诸葛亮"
+description: 个人很喜欢诸葛签诗，不知道为什么，就是喜欢签诗的文字。这次用爬虫爬到了最全最干净的内容，分享下~
 ---
 ---
 诸葛神签为三国时代杰出的军事家谋略家具有神机妙算之称的诸葛亮所著，此书在民间世代相传，至今已历十七个世纪，小自个人荣辱，家庭得失，大至战役胜负，邦国兴衰，皆有囊括。
