--- a/_posts/2016-10-14-mark-down.markdown
+++ b/_posts/2016-10-14-mark-down.markdown
@@ -41,7 +41,7 @@ Markdown manual
 
 示例：
 
-这是去往 [本人博客](http://ghosertblog.github.com) 的链接。
+这是去往 [本人博客](http://github.com/songroger) 的链接。
 
 ### 4. 无序列表
 
