--- a/_posts/2016-11-10-mei-yu.markdown
+++ b/_posts/2016-11-10-mei-yu.markdown
@@ -5,45 +5,26 @@ date:   2016-11-09 20:05:14 +0000
 categories: 最近在读
 tail: "未完待补充"
 description: 
-cover: "http://7xof48.com1.z0.glb.clouddn.com/peitu/meiyuxinquan.jpg"
+cover: ""
 ---
 ---
 
 喜欢英文源于中学时期，可以说是对语言的纯粹的喜欢。依然记得那会山东教育有个节目，算是最早期的在线电视教育，那时候节目里的那句“love English for fun”就刻在了我的心中。后续读到陆谷孙[^foot1]，毛荣贵[^foot2]以及乔老等诸多大师级别的文字，才真正知道，语言之美翻译之美，都那么不言而喻。这几天在图书馆拿到这本《美语新诠》，如沐春风得读着，感慨乔老对美语的驾轻就熟之余安利给大家。
 
-◎作者介绍
-
-乔志高（George Kao），本名高克毅，祖籍江苏江宁。1912年生于美国密歇根州，父亲是庚款留美的官费生。三岁回国，受中国西化家庭的传统教育，随塾师攻读四书五经，燕京大学毕业后返美，为密苏里大学新闻学硕士，哥伦比亚大学国际关系硕士。久居纽约、旧金山、华盛顿，1930年代曾任上海英文《大陆报》、《中国评论周刊》美国特约通讯员，抗战时任职纽约中华新闻社，后长期当任“美国之音”编辑，是中英文可左右开弓、运用自如的翻译家，有益有趣的随笔作者，高明的编辑，彬彬的绅士。
-自1960年代起，撰写“美语新诠”系列语言随笔，发表于港台报刊专栏，影响几代横跨中西视野的年轻学人。后任香港中文大学翻译中心客座高级研究员，与宋淇共同创编英文期刊《译丛》（Renditions）。出版中文作品《纽约客谈》《金山夜话》《美语新诠》《鼠咀集》等，英文著作有《湾区华夏》（Cathay by the Bay）《中国幽默文选》（Chinese Wit and Humor）等，与其胞弟高克永合编《最新通俗美语辞典》。译作有《大亨小传》《长夜漫漫路迢迢》和《天使，望故乡》，主持白先勇《台北人》的中译英工作。乔志高是香港翻译学会荣誉会士，2008年逝世于美国佛州。
 
 看过关于乔老的一篇访谈，他说
 “我初来美国做学生的时候，在密苏里一个小城，跟本地人谈起话来，他们往往会恭维我说：You speak a more correct English than we do.”
 其实读过他作品的人都不会觉得这是在恭维。
 
-◎内容简介
 
 白先勇说，“乔志高先生，这个人英文是一流的，那比美国人的英文还要道地。”
 陆谷孙说，“《美语新诠》既有学习英语的工具性，又有很强的通俗娱乐性。”
 “老顽童”乔志高的得意之作《美语新诠》系列，正是他在华语世界最受欢迎的作品。
 乔志高累积在美国数十年“听”美语的经验，将地道有趣的习语、俚语、谚语，以中国化的观点和智慧加以诠释。美语中涌现的新词语、新用法，它们的来龙去脉、言外之意，凡微妙费解处，都用亦庄亦谐的文字、风趣耐读的故事，或追本溯源，娓娓道来；或三言两语，点拨到位。
 为什么说不懂“双关语”（pun，“喷”），体会美式幽默永远只是隔靴搔痒？为什么说话斩钉截铁说一是一，不是现代美语的美德？为什么美国人说话尽量避免大字眼，严肃场合也要故意掺杂俚语解嘲？选举政治中的log-rolling、barnstorming、platform，都是什么意思？在公司里，上司让你跟各个部门touch base，你该怎么办？为什么美国人害怕接到pink slip？人们老说的the name of the game，是指球赛吗？……
-乔志高优游中西文化六十余载，在他笔下，英文美语不再是呆板严肃的功课，而是轻松有趣、引人入胜的体验。书中汇集数千条地道美语，涉及华府政治、新闻传媒、竞技体育、大众生活的方方面面，汇成美国本土的南腔北调，最真实的美国之音，为美式英语权威集大成之作。
 
-◎名家推荐
+乔老优游中西文化六十余载，在他笔下，英文美语不再是呆板严肃的功课，而是轻松有趣、引人入胜的体验。书中汇集数千条地道美语，涉及华府政治、新闻传媒、竞技体育、大众生活的方方面面，汇成美国本土的南腔北调，最真实的美国之音，为美式英语权威集大成之作。
 
-★  梁实秋——乔志高关于英语的文章“不但精审，而且有趣”。 
-
-★  夏志清——乔志高对美国语言了解如此之深，正因为他对美国的历史、政治、社会、文学、艺术、音乐以及各色人种及其方言，五六十年来日常注意而非常内行，远非一般专治一行的旅美博士、教授可望其项背的。
-
-★  白先勇—— 高先生诠释美语，深入浅出，每个词汇后面的故事，他都能说得兴趣盎然，读来引人入胜，不知不觉间，读者便学到了美语的巧妙，同时对美国社会文化也就有了更 深一层的了解，因为高先生说的那些美语故事，其实反映了美国的社会史、文化史。高先生的英文能深能浅，雅俗之间，左右逢源，同时又有深藏不露的一面。
-
-★  陆谷孙——志高技高，汉英双语造诣俱深，好弄翻译之外，更是一位two-fisted writer……我深为志老十年如一日关注、追踪美语变化的执着和捕捉新词语的敏感所折服。
-
-★  董  桥——第一流的美语专家，功力那么深厚，每一个英文字经他掂量随手写些美语新诠一段段全是珠玑。
-
-★  金圣华——高先生丰盛的双语生涯，是一般人无法领悟的，他毕生在中英双语中穿插出入，折冲往返，他的学识，他的经验，他对促进中西文化交流的努力与贡献，岂是一言可以尽道？
-
-★  黄碧端——乔志高深厚的中西文化养成基础和极度敏锐的语感天赋，加上广泛的知识趣味，使他在中英语言的掌握和互译的功力上，放眼当今可以说无人可以取代！
 
 
 [^foot1]: 《余墨集-陆谷孙》。
