--- a/_posts/2017-12-03-life-song.markdown
+++ b/_posts/2017-12-03-life-song.markdown
@@ -4,7 +4,7 @@ title:  "生活中应该有诗的"
 date:   2017-12-03 21:40:15 +0000
 categories: diary
 keywords: youth
-cover: "http://7xof48.com1.z0.glb.clouddn.com/on_cover6.jpg"
+cover: "/img/on_cover6.jpg"
 description: 无力改变世界，愿世界更美好。
 ---
 
