--- a/_posts/2017-12-03-life-song.markdown
+++ b/_posts/2017-12-03-life-song.markdown
@@ -3,6 +3,7 @@ layout: post
 title:  "生活中应该有诗的"
 date:   2017-12-03 21:40:15 +0000
 categories: diary
+tags: recommend
 keywords: youth
 cover: "/img/on_cover6.jpg"
 cover_display: True
