--- a/_posts/2019-11-05-non-title-s1.markdown
+++ b/_posts/2019-11-05-non-title-s1.markdown
@@ -4,7 +4,7 @@ title:  "所谓伊人在水一方"
 date:   2019-11-05 08:10:14 +0000
 categories: diary
 keywords: life, youth
-description: 蒹葭苍苍，白露为霜
+description: "蒹葭苍苍，白露为霜"
 ---
 
 9102年就快过去了，年初定的计划，多少还是有所完成，算是给又成长了的自己些许安慰。期盼的惊喜之一好像也正在发生着，我真的遇到了一个非常不错的姑娘。
