--- a/_posts/2018-07-12-to-my16.markdown
+++ b/_posts/2018-07-12-to-my16.markdown
@@ -7,7 +7,7 @@ tags: recommend
 keywords: 16, youth
 cover: "/img/webwxgetmsgimg.jpg"
 description: 此时此刻，在这个世界上，还有无数的像你一样16岁的少年，他们绝对无法知道在他们人生未来的岁月里将会发生的。
-audio_id: "1356738952"
+audio: "http://m10.music.126.net/20200410212039/84f947ba6d017e416cb215e12f142bd2/ymusic/0358/5308/0308/42437aa1eadb36fa6ba94b9015b45bae.mp3"
 ---
 
 我知道现在的自己是再也回不去的了。可是倘若有机会，我是多么希望能让16岁的你在一个晴朗的，没有负担的午后读到这封信，并且多么希望你能够将它读上好多遍。这样的场景或许只会发生在奇幻电影中，我坐在这里一字一字写下给16岁的你的文字，当文字就这么不停地落下，周遭的景致便不停变化，有的记忆会消失，有的记忆会莫名浮起，不知处在什么年岁的夹在中间的我，就像是芝诺悖论中的阿喀琉斯或那只乌龟，不知道谁会最终超过谁。而此时此刻，在这个世界上，还有无数的像你一样16岁的少年，他们绝对无法知道在他们人生未来的岁月里将会发生的。有一天他们也会到28岁，那个时候他们会希望未来的自己游回这时间河流，和青春的自己长谈么？这些文字恐怕不可避免地会带有说教的意味，并非是现在的自己觉得那时的你做的不好。只是，你所做的每一件事，都会基于你当时所掌握的所有信息量。如果信息量发生改变，你所做的决定和之后的实际行动也就会必然发生改变。
